--- a/APS2/dune-project
+++ b/APS2/dune-project
@@ -1,6 +1,6 @@
 (lang dune 3.16)
 
-(name APS1A)
+(name APS2)
 
 (generate_opam_files true)
 
@@ -16,7 +16,7 @@
 (documentation https://url/to/documentation)
 
 (package
- (name APS1A)
+ (name APS2)
  (synopsis "A short synopsis")
  (description "A longer description")
  (depends ocaml dune)
